--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,200 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>R2 Presigned Upload Test</title>
+    <style>
+      body {
+        font-family:
+          system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Arial;
+        margin: 24px;
+      }
+      .box {
+        border: 1px solid #ddd;
+        border-radius: 12px;
+        padding: 16px;
+        max-width: 720px;
+      }
+      button {
+        padding: 10px 14px;
+        border-radius: 10px;
+        border: 1px solid #ddd;
+        background: #fff;
+        cursor: pointer;
+      }
+      button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+      }
+      input {
+        padding: 8px;
+      }
+      progress {
+        width: 100%;
+        height: 18px;
+      }
+      code {
+        background: #f6f6f6;
+        padding: 2px 6px;
+        border-radius: 8px;
+      }
+      .small {
+        color: #666;
+        font-size: 13px;
+      }
+      pre {
+        background: #0b1020;
+        color: #e8e8e8;
+        padding: 12px;
+        border-radius: 12px;
+        overflow: auto;
+      }
+    </style>
   </head>
   <body>
-    <a href="https://github.com/jacklehamster/cloudflare-worker"
-      >Hello, World!</a
-    >
-    <script src="yt-playlist.js" data-video="3LQVI0OfT1Y" defer></script>
+    <h2>R2 Presigned Upload Test</h2>
+
+    <div class="box">
+      <div style="margin-bottom: 12px">
+        <input id="file" type="file" />
+      </div>
+
+      <div style="margin-bottom: 12px">
+        <label class="small">userId (just used for key prefix):</label><br />
+        <input id="userId" value="test-user" style="width: 240px" />
+      </div>
+
+      <div style="margin-bottom: 12px">
+        <button id="btn">Upload</button>
+      </div>
+
+      <div style="margin-bottom: 8px">
+        <progress id="prog" value="0" max="100"></progress>
+        <div id="status" class="small">Idle</div>
+      </div>
+
+      <div class="small" style="margin-top: 12px">
+        <div>assetId: <code id="assetId">-</code></div>
+        <div>r2Key: <code id="r2Key">-</code></div>
+      </div>
+    </div>
+
+    <h3>Log</h3>
+    <pre id="log"></pre>
+    <div id="out"></div>
+
+    <script>
+      const $ = (id) => document.getElementById(id);
+      const log = (s) => {
+        $("log").textContent += s + "\\n";
+      };
+
+      async function sha256Hex(blob) {
+        const buf = await blob.arrayBuffer();
+        const digest = await crypto.subtle.digest("SHA-256", buf);
+        return [...new Uint8Array(digest)]
+          .map((b) => b.toString(16).padStart(2, "0"))
+          .join("");
+      }
+
+      function putWithProgress(url, file, onProgress) {
+        return new Promise((resolve, reject) => {
+          const xhr = new XMLHttpRequest();
+          xhr.open("PUT", url, true);
+          xhr.setRequestHeader(
+            "Content-Type",
+            file.type || "application/octet-stream",
+          );
+
+          xhr.upload.onprogress = (e) => {
+            if (!e.lengthComputable) return;
+            const pct = Math.round((e.loaded / e.total) * 100);
+            onProgress(pct, e.loaded, e.total);
+          };
+
+          xhr.onload = () =>
+            xhr.status >= 200 && xhr.status < 300
+              ? resolve()
+              : reject(
+                  new Error(
+                    "PUT failed: " + xhr.status + " " + xhr.responseText,
+                  ),
+                );
+
+          xhr.onerror = () => reject(new Error("PUT network error"));
+          xhr.send(file);
+        });
+      }
+
+      async function postJson(path, body) {
+        const r = await fetch(path, {
+          method: "POST",
+          headers: { "content-type": "application/json" },
+          body: JSON.stringify(body),
+        });
+        const txt = await r.text();
+        if (!r.ok) throw new Error(path + " failed (" + r.status + "): " + txt);
+        return JSON.parse(txt);
+      }
+
+      $("btn").onclick = async () => {
+        $("btn").disabled = true;
+        $("prog").value = 0;
+        $("status").textContent = "Hashing…";
+        $("log").textContent = "";
+        $("out").innerHTML = "";
+
+        try {
+          const file = $("file").files?.[0];
+          if (!file) throw new Error("Pick a file first.");
+
+          const userId = $("userId").value || "anon";
+          const sha256 = await sha256Hex(file);
+
+          $("status").textContent = "Requesting upload URL…";
+          log("sha256: " + sha256);
+
+          const init = await postJson("/upload-url", {
+            userId,
+            sha256,
+            mime: file.type || "application/octet-stream",
+            bytes: file.size,
+          });
+
+          $("assetId").textContent = init.assetId;
+          $("r2Key").textContent = init.r2Key;
+
+          $("status").textContent = "Uploading to R2…";
+          await putWithProgress(init.putUrl, file, (pct, loaded, total) => {
+            $("prog").value = pct;
+            $("status").textContent = `Uploading… ${pct}% (${loaded}/${total})`;
+          });
+
+          $("status").textContent = "Committing…";
+          await postJson("/commit", {
+            assetId: init.assetId,
+            r2Key: init.r2Key,
+            mime: file.type || "application/octet-stream",
+            bytes: file.size,
+          });
+
+          $("status").textContent = "Done ✅";
+          const link = `/a/${encodeURIComponent(init.assetId)}`;
+          $("out").innerHTML = `
+        <p><b>Fetch:</b> <a href="${link}" target="_blank" rel="noopener">${link}</a></p>
+      `;
+          log("OK: " + link);
+        } catch (e) {
+          $("status").textContent = "Error ❌";
+          log(String(e?.message || e));
+        } finally {
+          $("btn").disabled = false;
+        }
+      };
+    </script>
   </body>
 </html>
